@@ -1,4 +1,4 @@
 DIST zanshin-0.6.tar.gz 74620 RMD160 4e396fbf35520a163622536275ca6e1ee1cd1982 SHA1 d9a7d89c8de07cdf973ecc6167f4a77164117428 SHA256 728b4a67f852894877cdbce3949c2b9ccee20e520f7ef93cd976726071c1c84f
-EBUILD zanshin-0.6.ebuild 399 RMD160 4e0c52f478bca8cb16e2783f3010aee8729d0a58 SHA1 431f33b1d37502a5f9448252f67be9bc73f52aa5 SHA256 8201cad96766a65a904ac1593fe9b9332a68e155f384e346ba5aaf7b5d425719
-MISC ChangeLog 255 RMD160 37a7aaa8eaae98dad7181c53021275bdb5f243e0 SHA1 e5c2396dda219d732840f30d3b1836e1c8919c6c SHA256 d082b15d463f6ac44b7ba46640f0396d37f7d414c9129d3194cd8787f99c1194
+EBUILD zanshin-0.6.ebuild 816 RMD160 e5c0a7e86d68e10e95e57694da5667b1881454dc SHA1 f3a839cfcfa9ceada3b75266d1da0ef2644c6acc SHA256 387b44c7a85b03ae0d11305bd1580d4e7481f527ae1162b989c9c45a090d5a2a
+MISC ChangeLog 380 RMD160 b0a55d52d515fcd0123ce9b88b895dfafdf9e719 SHA1 efaaad02ba2f1a1700c9d062ce02cb41b6d8a391 SHA256 255b8059cca6a5d00de9e3cbf3d24962ca926797653fe1e52d0955f2462dd0ad
 MISC metadata.xml 496 RMD160 a6f625130c2ff0615fc380f9c053d99d5f2c105c SHA1 4e30326c80535a7dd6abf641ae575806f3be9ae7 SHA256 9c1ad8825754e475ce4c26d502374f8fa0d739d7e2ffaf2ab1e53aedab71bfe1
